--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registration Page</title>
-
     <link rel="stylesheet" href="styles.css">
-
-    <!-- Favicon Link -->
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -17,15 +14,41 @@
     <div class="background-wave wave2"></div>
     
     <div class="registration-container">
-        <img src="images/tellix-new.png" alt="Tellix Logo" class="logo">
-        <form>
-          <input type="text" placeholder="Full Name" required>
-          <input type="email" placeholder="Email" required>
-          <input type="password" placeholder="Enter Password" required>
-          <input type="password" placeholder="Confirm Password" required>
-          <button type="submit">Sign Up</button>
+        <img src="images/tellix-logo-noBG.png" alt="Tellix Logo" class="logo">
+        
+        <!-- Registration Form -->
+        <form id="registrationForm">
+            <input type="text" placeholder="Full Name" required>
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Enter Password" required>
+            <input type="password" placeholder="Confirm Password" required>
+            <button type="submit">Sign Up</button>
         </form>
-        <p>Already have an account? <a href="#" style="color: #ffcc29;">Login</a></p>
-      </div>
+        <p id="switchToLogin">Already have an account? <a href="#" style="color: #ffcc29; text-decoration: none;" onclick="showLogin()">Login</a></p>
+
+        <!-- Login Form -->
+        <form id="loginForm" style="display: none;">
+            <input type="email" placeholder="Email" required>
+            <input type="password" placeholder="Password" required>
+            <button type="submit">Login</button>
+        </form>
+        <p id="switchToRegister" style="display: none;">Don't have an account? <a href="#"  style="color: #ffcc29; text-decoration: none;" onclick="showRegistration()">Register</a></p>
+    </div>
+
+    <script>
+        function showLogin() {
+            document.getElementById('registrationForm').style.display = 'none';
+            document.getElementById('switchToLogin').style.display = 'none';
+            document.getElementById('loginForm').style.display = 'block';
+            document.getElementById('switchToRegister').style.display = 'block';
+        }
+
+        function showRegistration() {
+            document.getElementById('loginForm').style.display = 'none';
+            document.getElementById('switchToRegister').style.display = 'none';
+            document.getElementById('registrationForm').style.display = 'block';
+            document.getElementById('switchToLogin').style.display = 'block';
+        }
+    </script>
 </body>
 </html>
